src/core-crm/objects/Product_Request_Contact_Role__c/Product_Request_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Product Request Contact Role</label>
    <nameField>
        <label>Product Request Contact Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Request Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>