src/core-crm/objects/Product_Request_Contact_Role__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to determine if the Product Request Contact Role is active.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>