src/core-crm/objects/Product_Request_Contact_Role__c/fields/Product_Request__c.field-meta.xml
<CustomField>
    <fullName>Product_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Request</label>
    <referenceTo>Product_Request__c</referenceTo>
    <relationshipLabel>Product Request Contact Roles</relationshipLabel>
    <relationshipName>Product_Request_Contact_Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>