src/core-crm/objects/Product_Request_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Describe the relationship that the contact has to the Product Request</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Partnership Manager</fullName>
            </value>
            <value>
                <fullName>Facilitator</fullName>
            </value>
            <value>
                <fullName>Program Lead</fullName>
            </value>
            <value>
                <fullName>Program Learning Designer</fullName>
            </value>
            <value>
                <fullName>Program Administrator</fullName>
            </value>
            <value>
                <fullName>Faculty Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>